src/objects/Asset.object
<CustomObject>
    <fields>
        <fullName>Base_Url__c</fullName>
        <formula>CASE($User.ProfileId, $Setup.CS_Profile_Id__c.CS_Customer_Profile__c ,&quot;/customer/&quot;,  $Setup.CS_Profile_Id__c.CS_Partner_Profile__c,&quot;/GWPartners/&quot;,&quot;/&quot;)</formula>
        <label>Base Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_3_party_Monitoring_Software_Installe__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is third party monitoring software installed?</description>
        <label>3rd party Monitoring Software Installed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Account_Mgmt_Portal_Date__c</fullName>
        <label>Account Mgmt Portal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_Account_Mgmt_Portal_License__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Mgmt Portal License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Account_Name__c</fullName>
        <formula>Account.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_AppSvr_Version__c</fullName>
        <label>App Server Version</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_App_Server__c</fullName>
        <label>Application Server</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WebSphere (IBM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tomcat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JBoss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WebLogic (BEA)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Archiving__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archiving</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Asset_Mailing_Address__c</fullName>
        <formula>Account.Billing_Street__c &amp; BR()&amp;
Account.Billing_City__c &amp; BR()&amp;
Account.pw_cc__BillingStateLookup__r.Name &amp; BR()&amp;
Account.Billing_Zip_Postal_Code__c &amp; BR()&amp;
Account.pw_cc__BillingCountryLookup__r.Name</formula>
        <label>Asset Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Asset_Short_Name__c</fullName>
        <label>Asset Short Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_BFO_Batch_Server__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BFO Batch Server</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_BFO_CPU_Count__c</fullName>
        <label>BFO CPU Count</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_BFO_License_Date__c</fullName>
        <label>BFO License Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_BFO_License__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BFO License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_BI_License_Date__c</fullName>
        <label>BI License Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_Browser_Version__c</fullName>
        <label>Browser Version</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Business_Intelligence_License__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Intelligence License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_CDM_License_Date__c</fullName>
        <label>CDM License Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_CDM_License__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CDM License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_CE_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Consulting Enablement Contact on the Asset</description>
        <label>CE Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AssetslvAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CS_CPU_Core_Count__c</fullName>
        <label>CPU/Core Count</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Carbon_Copy_Email_1__c</fullName>
        <description>*********Service Cloud  - Carbon Copy Email 1********</description>
        <label>Carbon Copy Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CS_Carbon_Copy_Email_2__c</fullName>
        <description>*********Service Cloud  - Carbon Copy Email 2********</description>
        <label>Carbon Copy Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CS_Carbon_Copy_Email_3__c</fullName>
        <description>****** Service Cloud - Carbon Copy Email 3******</description>
        <label>Carbon Copy Email 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CS_Catastrophe_App_Date__c</fullName>
        <label>Catastrophe App Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_ClaimCanvas_App_Date__c</fullName>
        <label>ClaimCanvas App Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_Claim_Portal_Date__c</fullName>
        <label>Claim Portal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_Claim_Portal_License__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Claim Portal License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Client_Side_Virtualization_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Client side virtualization used?</description>
        <label>Client Side Virtualization Used?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Clustering__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Clustering Enabled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Cognos_License_Date__c</fullName>
        <label>Cognos License Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_Cognos_License__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cognos License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_ComparePlus_App_Date__c</fullName>
        <label>ComparePlus App Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CS_Compare_App_Date__c</fullName>
        <label>Compare App Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_Contractual_Financial_Penalties__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SLA Penalties</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_CurGoLive_ProdVers__c</fullName>
        <label>CurGoLive ProdVers</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Cur_Dev_Version__c</fullName>
        <label>Cur Development Vers</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Customer_Implementation_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Implementation Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assets9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CS_Customer_Name__c</fullName>
        <description>**** Only for Partner Visibility****</description>
        <formula>Account.Name</formula>
        <inlineHelpText>Customer Name</inlineHelpText>
        <label>Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_DB_client_version__c</fullName>
        <label>DB client version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_DM_RightNow_Parent_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field created for Data migration to load parent Asset values using dataloader.io</description>
        <label>Parent ID</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CS_DataHub_Date__c</fullName>
        <label>DataHub Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_DataHub_License__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DataHub License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Database_Patch__c</fullName>
        <label>Database Patch</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Database_Server__c</fullName>
        <label>Database Server</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft SQL Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM DB2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MySQL</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Date_SBOP_License__c</fullName>
        <label>SBOP Data Integrator Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_Date_Std_Reporting_License__c</fullName>
        <label>Standard Reporting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_Date_Vendorportal_License__c</fullName>
        <label>Vendor Portal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_Dbsvr_Version__c</fullName>
        <label>Database Version</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Disaster_Recovery_product_used__c</fullName>
        <label>Disaster Recovery product used</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Disaster_Recovery_setup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disaster Recovery setup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Doc_Mgmt__c</fullName>
        <label>Document Mgmt</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alfresco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DocuBase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DocuMaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FileNet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GW Demo Document Adapter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM Content Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ImageRight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OnBase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle Content Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SharePoint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SpringCM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thunderhead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vignette</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XTREME</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_EST_Go_Live__c</fullName>
        <label>Initial Go-Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_GPS_Number__c</fullName>
        <label>GPS Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_GW_Imp_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GW Imp Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_GW_Rolloff_Date__c</fullName>
        <label>GW Roll Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_GW_SC_ImpDate__c</fullName>
        <label>CurImpDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_Gateway_for_Portal_Agents_Date__c</fullName>
        <label>Gateway for Portal Agents Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_Gateway_for_Portal_Agents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gateway for Portal Agents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Hail_App_Date__c</fullName>
        <label>Hail App Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_Hide_On_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>*** Hide On Case ***</description>
        <label>Hide On Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_InetSoft_License_Date__c</fullName>
        <label>InetSoft License Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_InetSoft_License__c</fullName>
        <defaultValue>false</defaultValue>
        <label>InetSoft License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_InfoCenter_Date__c</fullName>
        <label>InfoCenter Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_InfoCenter_License__c</fullName>
        <defaultValue>false</defaultValue>
        <label>InfoCenter License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_InsuranceCloud_Partner__c</fullName>
        <label>InsuranceCloud Partner</label>
        <picklist>
            <picklistValues>
                <fullName>Capgemini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PWC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FDC</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Intro_to_Support_Complete_Date__c</fullName>
        <label>Intro to Support Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>***** Asset  active Status ******</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_JVM_Tunings__c</fullName>
        <label>JVM Tunings</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CS_JVM_Vendor__c</fullName>
        <label>JVM Vendor</label>
        <picklist>
            <picklistValues>
                <fullName>IBM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sun HotSpot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BEA JRockit</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_JVM_Version__c</fullName>
        <label>JVM Version</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_License_Date__c</fullName>
        <label>License Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_License_SBOP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SBOP Data Integrator License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_License_Std_Reporting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Standard Reporting License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_License_Vendor_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vendor Portal License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_LiveApp_ClaimCanvas__c</fullName>
        <label>ClaimCanvas App</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_LiveApp_ComparePlus__c</fullName>
        <label>ComparePlus App</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_LiveApp_Compare__c</fullName>
        <label>Compare App</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_LiveApp_Hail__c</fullName>
        <label>Hail App</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_LiveApp_ViewPoint_Date__c</fullName>
        <label>ViewPoint App Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_LiveApp_ViewPoint__c</fullName>
        <label>ViewPoint App</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Load_Balancer__c</fullName>
        <label>Load Balancer</label>
        <picklist>
            <picklistValues>
                <fullName>Alteon,Cisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F5  (Big-IP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM Edge Server 5.1.1.72</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM Edge Server 6.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft Network Load Balancer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netscalar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HAProxy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_London_Market_License_Date__c</fullName>
        <label>London Market License Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_London_Markets_License__c</fullName>
        <defaultValue>false</defaultValue>
        <label>London Markets License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Monitoring_Software__c</fullName>
        <description>What are the 3rd party monitoring software installed.</description>
        <label>Monitoring Software</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_MyAgentsApp_Date__c</fullName>
        <label>MyAgentsApp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_No_Customer_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Customer Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_No_Downloadable__c</fullName>
        <description>**** Field to  prevent display download Link *****</description>
        <formula>IF(CONTAINS(Name,&apos;Rating Management&apos;),&apos;True&apos;,
    IF(CONTAINS(Name,&apos;Reinsurance&apos;),&apos;True&apos;,
        &apos;False&apos;
     )
  )</formula>
        <label>No Downloadable</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_No_Software_Downloads__c</fullName>
        <defaultValue>false</defaultValue>
        <description>*** Service Cloud No Software Download Records ***********</description>
        <label>No Software Downloads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Non_Standard_SLA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non Standard SLA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Not_in_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <description>*** Not in Use ***</description>
        <label>Not in Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Number_Solution_Owners__c</fullName>
        <description>****Service Cloud Solution Owners Allowed  ********</description>
        <label>Number Solution Owners</label>
        <summaryFilterItems>
            <field>CS_Asset_Contact_Permissions__c.CS_Access_Type__c</field>
            <operation>equals</operation>
            <value>Customer Support</value>
        </summaryFilterItems>
        <summaryForeignKey>CS_Asset_Contact_Permissions__c.CS_Asset__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CS_Number_of_Online_and_Batch_servers__c</fullName>
        <label>Number of Online and Batch servers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_ODC_Status__c</fullName>
        <label>ODC Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_OS_Version__c</fullName>
        <label>OS Version</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Operating_System__c</fullName>
        <label>Operating System</label>
        <picklist>
            <picklistValues>
                <fullName>AIX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Linux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Org_Type__c</fullName>
        <label>Organization Type</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidewire Org</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Organization__c</fullName>
        <description>*** Service Cloud Organization Name*****</description>
        <formula>Parent.Name</formula>
        <label>Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_PE_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SE Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assets5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CS_PE_Weekly_Call__c</fullName>
        <label>SE Call</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CS_Parent_Product__c</fullName>
        <description>Fetches Product Name from Standard product</description>
        <formula>BLANKVALUE(Product2.Product__r.Name, Product2.Name)</formula>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Physical_and_Virtual_Memory__c</fullName>
        <description>what is your ratio between physical and virtual CPUs and memory?</description>
        <inlineHelpText>Yes, 2 physical CPUs/4 virtual CPUs; 32g physical memory/32g virtual memory.</inlineHelpText>
        <label>Physical and Virtual CPU&apos;s/ Memory ratio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Pri_Supp_Org__c</fullName>
        <label>Primary Support Org</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting Enablement Group</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Primary_Supp_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pri. Support Partner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assets6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CS_Prod_Svcs_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prod. Svcs. Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Product_Family__c</fullName>
        <formula>HYPERLINK(
CASE($User.ProfileId, $Setup.CS_Profile_Id__c.CS_Customer_Profile__c ,&quot;/customer/&quot;,  $Setup.CS_Profile_Id__c.CS_Partner_Profile__c ,&quot;/GWPartners/&quot;,&quot;/&quot;)&amp;Id,
IMAGE(
CASE(  BLANKVALUE(Product2.Product__r.Name, Product2.Name) ,
&quot;BillingCenter&quot;,Image_Url__c&amp;&quot;/producticons/BillingCenter.png&quot;, 
&quot;ClaimCenter&quot;,Image_Url__c&amp;&quot;producticons/ClaimCenter.png&quot;, 
&quot;PolicyCenter&quot;,Image_Url__c&amp;&quot;producticons/PolicyCenter.png&quot;,
&quot;DataHub&quot;,Image_Url__c&amp;&quot;producticons/DataHub.png&quot;, 
&quot;InfoCenter&quot;,Image_Url__c&amp;&quot;producticons/InfoCenter.png&quot;,
Image_Url__c&amp;&quot;NoImages&quot;),Product2.Product__r.Name,20,20)
,&apos;_self&apos;)</formula>
        <inlineHelpText>Product Family</inlineHelpText>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Product_SKU_ID__c</fullName>
        <description>*** Service Cloud Product SKU ID  used by Asset and Entitlement Setup*****</description>
        <label>Product SKU ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Product_Set_Name__c</fullName>
        <description>***** Product set Name*******</description>
        <formula>TEXT(Product2.Product_Set_Name__c)</formula>
        <label>Product Set Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Product_Type__c</fullName>
        <formula>BLANKVALUE(Product2.Product__r.RecordType.Name, Product2.RecordType.Name)</formula>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Product_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Version</label>
        <referenceTo>CS_Release__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CS_Product__c</fullName>
        <formula>Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Production_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Production Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Project_Manager__c</fullName>
        <label>Project Manager</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Project_Product_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Product Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assets7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CS_Prospect_Evaluation_End_Date__c</fullName>
        <description>Prospect Evaluation End Date</description>
        <inlineHelpText>Prospect Evaluation End Date</inlineHelpText>
        <label>Prospect Evaluation End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_Quote_and_Buy_License_Date__c</fullName>
        <label>Quote and Buy License Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_Quote_and_Buy_License__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quote and Buy License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_RCS_Active_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does the customer have an active RCS contract in place</description>
        <inlineHelpText>Does the customer have an active RCS contract in place</inlineHelpText>
        <label>ODC Active Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_RCS_Details__c</fullName>
        <description>Details specific to the RCS engagement</description>
        <inlineHelpText>Details specific to the RCS engagement</inlineHelpText>
        <label>ODC Details</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CS_RCS_End_Date__c</fullName>
        <description>What is the end date of the current RCS Contract</description>
        <inlineHelpText>What is the end date of the current RCS Contract</inlineHelpText>
        <label>ODC End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_RCS_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Who owns the RCS account from the SolutionCenter/Services</description>
        <inlineHelpText>Who owns the RCS account from the SolutionCenter/Services</inlineHelpText>
        <label>ODC Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assets4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CS_RCS_Start_Date__c</fullName>
        <description>What is the start date of the current RCS Contract</description>
        <inlineHelpText>What is the start date of the current RCS Contract</inlineHelpText>
        <label>ODC Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_RCS_Type__c</fullName>
        <description>What type of RCS is being offered to the customer</description>
        <inlineHelpText>What type of RCS is being offered to the customer</inlineHelpText>
        <label>ODC Type</label>
        <picklist>
            <picklistValues>
                <fullName>Data Migration Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infrastructure Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remote Consulting Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting Services</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Rally_Licensed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rally Licensed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Rally_Licenses_Provided__c</fullName>
        <label>Number of Rally Licenses</label>
        <length>3</length>
        <type>Text</type>
    </fields>
</CustomObject>